# trinitron

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
scripts/: clean_manim_output.sh
videos/: common.py  config.yaml
videos/_base_animation/: common.py
videos/_test/: README.md  config.yaml  episode.py
videos/frontend/: README.md  config.yaml  episode.py
videos/lexer/: README.md  config.yaml  episode.py  scene.py
videos/parser/: README.md  config.yaml  episode.py
videos/semantic/: README.md  config.yaml  episode.py
